<resources>
    <string name="app_name">WorkoutManager</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title">Toolbar Title</string>

    <!--Main Activity-->
    <string name="workout">Workout</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>

    <!--Workout Fragment-->
    <string name="workout_title">Workout Title</string>
    <string name="workout_duration">Workout Duration</string>
    <string name="workout_exercises">Workout&#39;s Exercise</string>
    <string name="quick_starters">Quick Start</string>
    <string name="custom_made">Custom Made</string>

    <!--History Fragment-->
    <string name="workout_times">Workout times:</string>
    <string name="total_calories_burned">Total calories burned:</string>

    <!--Settings Fragment-->
    <string name="sound">Sounds</string>
    <string name="exercises_duration">Exercise\'s duration</string>
    <string name="rests_duration">Rest\'s duration</string>
    <string name="themes">Themes</string>
    <string name="done">Done</string>
    <string name="change_password">Change password</string>
    <string name="update_info">Update info</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="enter_your_old_pass">Enter your old password</string>
    <string name="enter_your_new_pass">Enter your new password</string>
    <string name="password_updated">Password is updated</string>
    <string name="update_password_failed">Failed to update password</string>
    <string name="update_info_failed">Failed to update info. Please check your connection</string>
    <string name="click_chart_item">(Click item to show details)</string>

    <!--Workout Details Fragment-->
    <string name="back">Back</string>
    <string name="cardioRate">Cardio</string>
    <string name="strength">Strength</string>
    <string name="mobility">Mobility</string>
    <string name="total_exercise">0 exercise</string>
    <string name="total_time">00:00</string>
    <string name="add_workout">Add Workout</string>
    <string name="click_iv_to_choose">(click on icon to choose another)</string>
    <string name="workout_details">Workout Details</string>
    <string name="positive_btn">OK</string>
    <string name="negative_btn">Cancel</string>
    <string name="confirm_save">Are you sure you want to save?</string>
    <string name="confirm_delete">Are you sure you want to delete this workout?</string>
    <string name="enter_workout_title">Enter your workout\'s title</string>

    <!--Add Exercise Fragment-->
    <string name="add_exercise">Add Exercise</string>
    <string name="exercise_name">Exercise name</string>

    <!--Login Activity-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="member_login">Member Login</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="not_email">Not an email</string>
    <string name="short_password">Password too short, enter minimum 6 characters</string>
    <string name="enter_email_password">Enter your email &amp; password</string>
    <string name="email_exist">Email already exists</string>
    <string name="weak_password">Password too weak</string>
    <string name="register_successfully">Registered successfully</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_age">Enter your age</string>
    <string name="enter_height">Enter your height</string>
    <string name="enter_weight">Enter your weight</string>
    <string name="number_format_exception">Number only</string>
    <string name="login_success">Logged in as</string>
    <string name="email_not_exist">Email does not exist</string>
    <string name="wrong_password">Wrong password</string>
    <string name="reset_password">Reset my password</string>
    <string name="send_reset_password">\nWe will send password reset instructions to this email?</string>
    <string name="send_reset_password_success">We have sent you instructions to reset your password</string>
    <string name="send_reset_password_failed">Failed to send reset email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--StartWorkoutFragment-->
    <string name="demo_time">00:00</string>
    <string name="ready">Ready</string>
    <string name="next">Next:</string>
    <string name="start_workout">Start Workout</string>
    <string name="user">User</string>
    <string name="unknown_age">Unknown Age</string>
    <string name="unknown_gender">Unknown Gender</string>
    <string name="unknown_height">Unknown Height</string>
    <string name="unknown_weight">Unknown Weight</string>
    <string name="invalid_age">Invalid age</string>
    <string name="invalid_height">Invalid height</string>
    <string name="invalid_weight">Invalid weight</string>
    <string name="no_connection">No connection</string>
</resources>
