<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="vn.com.hieptt149.workoutmanager.login.UserInfoDialog">

    <LinearLayout
        android:layout_width="@dimen/user_info_dialog_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/large_space">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Enter your information"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rdgr_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_space"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdbtn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rdbtn_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/female" />
        </RadioGroup>

        <EditText
            android:id="@+id/edt_name"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_space"
            android:drawableLeft="@drawable/name"
            android:drawablePadding="@dimen/small_space"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/edt_age"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_space"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/age"
            android:drawablePadding="@dimen/small_space"
            android:hint="@string/age" />

        <EditText
            android:id="@+id/edt_height"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_space"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/height"
            android:drawablePadding="@dimen/small_space"
            android:hint="@string/height" />

        <EditText
            android:id="@+id/edt_weight"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_space"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/scale"
            android:drawablePadding="@dimen/small_space"
            android:hint="@string/weight" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_space"
            android:text="@string/confirm"
            style="@style/MyButton"/>
    </LinearLayout>
</LinearLayout>
