<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context="vn.com.hieptt149.workoutmanager.login.LoginActivity">

    <LinearLayout
        android:id="@+id/ln_login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/small_space"
        android:weightSum="10"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:padding="@dimen/large_space"
            android:src="@drawable/avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/medium_space"
                android:text="@string/enter_email_password"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold" />

            <EditText
                style="@style/MyEditText"
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_space"
                android:drawableLeft="@drawable/envelope"
                android:drawablePadding="@dimen/small_space"
                android:hint="@string/email"/>

            <EditText
                style="@style/MyEditText"
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_space"
                android:drawableLeft="@drawable/key"
                android:drawablePadding="@dimen/small_space"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <RadioGroup
                android:id="@+id/rdgr_login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_space"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingRight="@dimen/large_space">

                <RadioButton
                    android:id="@+id/rdbtn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/login"
                    android:buttonTint="@color/colorPrimary"/>

                <RadioButton
                    android:id="@+id/rdbtn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/register"
                    android:buttonTint="@color/colorPrimary"/>
            </RadioGroup>

            <Button
                android:id="@+id/btn_login_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginTop="@dimen/medium_space"
                android:text="@string/login"
                style="@style/MyButton"/>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_space"
                android:text="@string/forgot_password"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/medium_space"
                android:text="@string/back"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
