<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="@dimen/medium_space"
    tools:context="vn.com.hieptt149.workoutmanager.addworkout.WorkoutDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="10"
            android:padding="@dimen/small_space">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:text="@string/cardio"
                android:textSize="@dimen/normal_text_size"
                android:gravity="center"/>
            <ProgressBar
                android:id="@+id/pb_cardio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="10"
            android:padding="@dimen/small_space">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:text="@string/strength"
                android:textSize="@dimen/normal_text_size"
                android:gravity="center"/>
            <ProgressBar
                android:id="@+id/pb_strength"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="10"
            android:padding="@dimen/small_space">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:text="@string/mobility"
                android:textSize="@dimen/normal_text_size"
                android:gravity="center"/>
            <ProgressBar
                android:id="@+id/pb_mobility"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:weightSum="10">
        <ImageView
            android:id="@+id/iv_choose_workout_icon"
            android:layout_width="@dimen/workout_details_image_view_width"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/edt_workout_title"
            android:layout_width="@dimen/workout_details_image_view_width"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <TextView
                android:id="@+id/tv_total_exercise"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/total_exercise"
                android:textSize="@dimen/normal_text_size"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tv_total_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/total_time"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/normal_text_size"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_preview_selected_exercise"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"></android.support.v7.widget.RecyclerView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <Button
            android:id="@+id/btn_add_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_space"
            android:text="@string/add_exercise"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_button"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</LinearLayout>
